Sprucing up home page

--- a/html/index.html
+++ b/html/index.html
@@ -5,22 +5,22 @@ require('indexHeader.php');
 
 <div class="row"><br><br></div>
 
-<div class="col-6 bigScreen indexLeft">
-<p>Left Column Top: put image here</p>
+<div class="col-6 bigScreen indexLeft" style="background-color:black;">
+<img src='/uploads/installsh.PNG' width="100%" height=auto />
 </div>
 
 <div class="col-6 indexRight" style="top:0">
-<p class="adTitle">Right Column Top</p>
+<p class="adTitle">Authenticated SSL Site in Minutes</p>
 <br>
 <p class="indented">
-Content
+TopSecondHost is an installation script that will take your fresh AWS Linux AMI to a fully-functioning SSL/HHTPS website, with user login capability.
 </p>
 <br>
 <p class="indented">
-More content
+This very website you are looking at is the base installation.  After installation, you will have a copy of this site as you see it now.
 </p>
 <p class="indented">
-More content
+The TopSecondHost website comes with built-in (secure) editing pages that will allow you to edit code, and upload files, from within the site itself.
 </p>
 </div>
 
@@ -28,22 +28,29 @@ More content
 <div class="clear40"></div>
 
 
-<div class="col-6 bigScreen indexLeft">
-<p class="adTitle">Left Column Bottom</p>
+<div class="col-6 bigScreen indexLeft" style="background-color:black;">
+<img src='/uploads/installsh.PNG' width="100%" height=auto />
 </div>
 
 <div class="col-6 indexRight">
-<p class="indented">
-No commitment necessary.  No credit card required.  Try it out with absolutely no risk.
+<p class="adTitle">
+What does it do?
 </p>
 <p class="indented">
-You should also know this.
-</p>
-<p>
-and this...
-</p>
-<p class="indented">
-and this.
+The TopSecondHost install.sh script performs the following:
+<br>
+<br>
+-Installs common dependencies
+<br>
+-Installs and configures Apache (httpd2.4)
+<br>
+-Installs MySQL and configures users (with your input)
+<br>
+-Creates database tables for user authntication (name and password etc..)
+<br>
+-Installs SSL certificate with Certbot.
+<br>
+-Installs SES-Mailer libraries and phpMyAdmin 
 </p>
 </div>
 
