--- a/html/index.html
+++ b/html/index.html
@@ -42,6 +42,8 @@ The TopSecondHost install.sh script performs the following:
 <br>
 -Installs common dependencies
 <br>
+-Installs PHP
+<br>
 -Installs and configures Apache (httpd2.4)
 <br>
 -Installs MySQL and configures users (with your input)
