--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@ require('indexHeader.php');
 <div class="row"><br><br></div>
 
 <div class="col-6 bigScreen indexLeft" style="background-color:black;">
-<img src='/uploads/installsh.PNG' width="100%" height=auto />
+<img src='https://topsecondhost.s3-us-west-2.amazonaws.com/installsh.PNG' width="100%" height=auto />
 </div>
 
 <div class="col-6 indexRight" style="top:0">
@@ -29,7 +29,7 @@ The TopSecondHost website comes with built-in (secure) editing pages that will a
 
 
 <div class="col-6 bigScreen indexLeft" style="background-color:black;">
-<img src='/uploads/installsh.PNG' width="100%" height=auto />
+<img src='https://topsecondhost.s3-us-west-2.amazonaws.com/indexhtml.PNG' width="100%" height=auto />
 </div>
 
 <div class="col-6 indexRight">
